--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                         <a href="/" class="blog-button">首页</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="/ReadMe" class="blog-button" target="_blank">痕迹</a>
+                                        <a href="https://github.com/OrvilleX/orvillex.github.io" class="blog-button" target="_blank">痕迹</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="/Guess" class="blog-button" target="_blank">乱编</a>
